package com.poo.T6_UsoAvanzado_ClasesObjetos.A_Herencia_Polimorfismo.C_EmpresaTareas;

public class Desarrollador extends Empleado {

    @Override
    public void realizarTarea() {
        System.out.println("Escribiendo código y solucionando bugs.");
    }
}
