package com.poo.T6_UsoAvanzado_ClasesObjetos.A_Herencia_Polimorfismo.C_EmpresaTareas;

public class Diseñador extends Empleado {

    @Override
    public void realizarTarea() {
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}