package com.poo.T6_UsoAvanzado_ClasesObjetos.A_Herencia_Polimorfismo.C_EmpresaTareas;

public class Empleado {

    public void realizarTarea() {
        System.out.println("Empleado realizando una tarea genérica.");
    }
}